--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,14 @@
 {
   "name": "ngForte",
-  "version": "0.0.1",
+  "version": "0.0.2",
+  "main": "dist/ngForte.js",
+  "authors": [
+    "Juan Stiza", "Juan Stiza <juanstiza@gmail.com>"
+  ],
   "dependencies": {
-    "angular": "~1.3.1",
+    "angular": ">= 1.3.1"
+  },
+  "devDependencies": {
     "angular-mocks": "~1.3.1"
   }
 }
